# RL_pruning

./: .gitignore  Makefile  README.md  pyproject.toml  test.ipynb
data/: gym_envids.csv
notebooks/: test.ipynb  visualize.ipynb
notebooks/visualize/: extract_time_reward.ipynb  plot.ipynb
script/: train.sh
script/is_prune/: train_0223.sh  train_0224.sh  train_0229.sh  train_0301.sh
script/no_prune/: train_0223.sh  train_0224.sh  train_0229.sh  train_0301.sh
src/models/DQN/: network.py  update.py  util.py
src/pruning/slth/: edgepopup.py
src/tools/: train.py  train_prune.py
src/tools/is_prune/: train.py
src/tools/no_prune/: train.py
src/utils/: date.py  email.py  logger.py  seed.py
